# bbsgroupsig

./: .gitignore  CMakeLists.txt  README.md  bbsgs.pc.in  runbuild.sh
benchmarks/: CMakeLists.txt  bench.cpp
bindings/: install.sh
bindings/go/: README.md  bbsgs_benchmark_test.go  bbsgs_test.go  cgo.go  go.mod
docs/: optimizations.md
include/bbsgs/: bbsgs.hpp  bbsgs_c.h  ec.hpp
src/: CMakeLists.txt  base.hpp  bbsgs.cpp  bbsgs_c.cpp  bbsgs_jni.cpp  ecgroup.cpp  ecgroup.hpp  helpers.cpp  helpers.hpp  keygen.cpp  keygen.hpp  keys.cpp  keys.hpp  setup.cpp  setup.hpp  signature.cpp  signature.hpp  utils.hpp
tests/: CMakeLists.txt  test_bbsgs.cpp  test_ecgroup.cpp
